--- a/templates/pages/painel_oficial.html
+++ b/templates/pages/painel_oficial.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Meu Painel{% endblock %}
+{% block title %}Consultar Oficial{% endblock %}
 
 {% block content %}
 <div class="page-header">
