fix: corrigi erro no dashboard

--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -222,7 +222,7 @@
                                         {{ m.get_status_display }}
                                     </span>
                                 </td>
-                                <td class="text-center">{{ m.total_designados }}</td>
+                                <td class="text-center">{{ m.qtd_designados }}</td>
                                 <td class="text-muted">{{ m.criado_em|date:"d/m/Y" }}</td>
                             </tr>
                             {% empty %}
