editei o footer com autoria

--- a/templates/base.html
+++ b/templates/base.html
@@ -161,7 +161,7 @@
     <!-- ========== FOOTER ========== -->
     {% if user.is_authenticated %}
     <footer class="footer">
-        <p>&copy; 2024 SIGEM - Corpo de Bombeiros Militar do Estado de Goiás</p>
+        <p>&copy; 2026 SIGEM - CBMGO - Criado por 1º Ten QOC 04119 Heitor Braga de Paula</p>
     </footer>
     {% endif %}
     
